--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 ul {
   list-style: none;
 }
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
